--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yifan Li"
-  avatar           : "profile.png"
+  avatar           : "self.jpg"
   bio              : "古之立大事者，不惟有超世之才，亦必有坚忍不拔之志"
   location         : "Beijing, China"
   employer         :
